fixed overflow issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -52,7 +52,7 @@ table {
   border-spacing: 0;
 }
 
-html {
+html, body {
   overflow-x: hidden;
   width: 100vw;
 }
